updated screens cropping issue

--- a/_scss/project-content.scss
+++ b/_scss/project-content.scss
@@ -40,7 +40,7 @@
 }
 /*********SCREENS STREAMFIELD*********/
 .screens-streamfield {
-	overflow: hidden;
+	overflow-x: hidden;
 	.flex-container {
 		margin-top:$r-space;
 		margin-bottom:$r-space;
